edit padding and content width

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #content{
     padding: 0 25px;
-    width: 100%;
+    width: calc(100% - 50px);
     height: calc(100vh - 300px);
     background-color: white;
 }
