--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 #content{
-    padding: 0 25px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 25px;
+    padding: 25px;
     width: calc(100% - 50px);
     height: calc(100vh - 300px);
     background-color: white;
