--- a/style.css
+++ b/style.css
@@ -6,6 +6,6 @@
     gap: 30px;
     padding: 25px;
     width: calc(100% - 50px);
-    height: calc(100vh - 300px);
+    height: 100%;
     background-color: white;
 }
