--- a/styles/cards.css
+++ b/styles/cards.css
@@ -8,7 +8,7 @@
 }
 
 .pokemon-name h3 {
-    font-size: 24px;
+    font-size: 30px;
     margin: 0 20px;
     color: white;
 }
@@ -40,4 +40,29 @@
 .pokemonIds img {
     height: 20px;
     width: 20px;
+}
+
+.pokemon-types{
+    margin-top: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    color: white;
+    margin-left: 20px;
+    width: 60px;
+    height: 100px;
+    gap: 10px;
+}
+
+.single-type-cart{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 1px   1px   10px   1px black;
+    border-radius: 10px;
+    height: 25px;
+    width: 60px;
+    background-color: gray;
+    margin: 15px 0;
+    font-size: 20px;
 }
