--- a/styles/cards.css
+++ b/styles/cards.css
@@ -6,6 +6,9 @@
     background-color: rgb(57, 54, 234);
     border-radius: 10px;
 }
+#miniPokeCard:hover{
+    cursor: pointer;
+}
 
 .pokemon-name h3 {
     font-size: 30px;
@@ -65,4 +68,15 @@
     background-color: gray;
     margin: 15px 0;
     font-size: 20px;
+}
+
+.type-image-container{
+    display: flex;
+    align-items: end;
+    justify-content: space-between;
+}
+
+.poke-image img{
+    height: 120px;
+    width: 120px;
 }
