--- a/style.css
+++ b/style.css
@@ -9,3 +9,24 @@
     height: 100%;
     background-color: white;
 }
+
+#button-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.load-more-button{
+    width: 250px;
+    height: 50px;
+    margin-bottom: 40px;
+    border-radius: 15px;
+    background-color: #e83030;
+    color: white;
+}
+
+.load-more-button:hover{
+    cursor: pointer;
+    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.395);
+}
