--- a/styles/header.css
+++ b/styles/header.css
@@ -1,5 +1,6 @@
 header{
-    position: relative;
+    position: sticky;
+    top: 0;
     height: 200px;
     width: 100%;
     background-color: #e83030;
