--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     background-color: white;
 }
 
-#button-container{
+#buttonContainer{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,3 +30,4 @@
     cursor: pointer;
     box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.395);
 }
+
