--- a/styles/loading-spinner.css
+++ b/styles/loading-spinner.css
@@ -17,11 +17,10 @@
     width: 200px;
     top: 50%;
     left: 50%;
-    -webkit-animation: spin 2s linear infinite; /* Safari */
-    animation: spin 3s linear infinite;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2.5s linear infinite;
   }
   
-  /* Safari */
   @-webkit-keyframes spin {
     0% { -webkit-transform: rotate(0deg); }
     100% { -webkit-transform: rotate(360deg); }
