--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
     border-radius: 15px;
     background-color: #e83030;
     color: white;
+    border: solid 1px black;
 }
 
 .load-more-button:hover{
