--- a/styles/cards.css
+++ b/styles/cards.css
@@ -4,6 +4,7 @@
     width: 200px;
     height: 200px;
     border-radius: 10px;
+    border: solid 1px black;
 }
 .miniPokeCard:hover{
     cursor: pointer;
