--- a/styles/pokemon-overlay.css
+++ b/styles/pokemon-overlay.css
@@ -13,6 +13,9 @@
 }
 
 .pokemon-info-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 600px;
     width: 400px;
     background-color: blue;
@@ -48,9 +51,42 @@
 
 #pokemonGif{
     text-align: center;
+    height: 90px;
+    width: 400px;
 }
 
 #pokemonGif img{
+    position: relative;
+    object-fit: contain;
+    left: 30px;
     width: 100px;
     height: 100px;
+}
+
+#pokemonInfoType{
+    width: 400px;
+    display: flex;
+    gap: 10px;
+    margin-left: 20px;
+}
+
+.single-info-type-cart{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 1px   1px   10px   1px rgba(0, 0, 0, 0.411);
+    border-radius: 10px;
+    height: 25px;
+    width: 60px;
+    background-color: rgb(194, 194, 194);
+    margin: 15px 0;
+    font-size: 20px;
+}
+
+.info-area{
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    background-color: white;
+    height: 350px;
+    width: 370px;
 }
