--- a/styles/pokemon-overlay.css
+++ b/styles/pokemon-overlay.css
@@ -8,8 +8,16 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(223, 223, 223, 0.404);
+    background-color: rgba(0, 0, 0, 0.274);
     z-index: 2; 
+}
+
+.backround-image{
+    height: 200px;
+    z-index: 0;
+    position: absolute;
+    top: 200px;
+    visibility: hidden;
 }
 
 .pokemon-info-container{
@@ -18,8 +26,9 @@
     align-items: center;
     height: 600px;
     width: 400px;
-    background-color: blue;
+    background-color: rgb(165, 165, 165);
     border-radius: 15px;
+    box-shadow: 2px   2px   10px   2px rgba(0, 0, 0, 0.699);
 }
 
 #nameAndTypeContainer{
@@ -28,17 +37,20 @@
     align-items: center;
     justify-content: space-between;
     color: white;
-    padding: 0 20px;
+    padding: 0 40px;
 }
 
 .info-name p{
-    font-size: 32px;
+    font-size: 46px;
+    margin: 24px 0;
+    z-index: 1;
 }
 
 .info-id-conatiiner{
     display: flex;
     align-items: center;
     gap: 6px;
+    z-index: 1;
 }
 
 .info-id-conatiiner img{
@@ -51,42 +63,90 @@
 
 #pokemonGif{
     text-align: center;
-    height: 90px;
+    height: 70px;
     width: 400px;
 }
 
 #pokemonGif img{
     position: relative;
     object-fit: contain;
-    left: 30px;
+    top: -15px;
+    left: 20px;
     width: 100px;
     height: 100px;
+    z-index: 1;
 }
 
 #pokemonInfoType{
+    color: white;
     width: 400px;
+    height: 40px;
     display: flex;
     gap: 10px;
-    margin-left: 20px;
+    margin-left: 40px;
+    z-index: 1;
 }
 
 .single-info-type-cart{
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     box-shadow: 1px   1px   10px   1px rgba(0, 0, 0, 0.411);
     border-radius: 10px;
     height: 25px;
     width: 60px;
     background-color: rgb(194, 194, 194);
-    margin: 15px 0;
     font-size: 20px;
+    z-index: 1;
 }
 
 .info-area{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
     background-color: white;
-    height: 350px;
+    height: 400px;
     width: 370px;
+}
+
+.tabs{
+    margin: 20px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 10px;
+}
+
+.single-tab{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    color: black;
+    width: 80px;
+    height: 25px;
+    box-shadow: 2px   2px   10px   2px rgba(0, 0, 0, 0.089);
+}
+
+.single-tab:hover{
+    cursor: pointer;
+    box-shadow: 2px   2px   10px   2px rgba(0, 0, 0, 0.288);
+}
+
+.single-tab p{
+    margin: 0;
+}
+
+#statsArea{
+    display: none;
+    width: 340px;
+}
+
+.stats-infos{
+    display: flex;
+    justify-content: space-around;
+    gap: 25px;
 }
