--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 #content{
     display: flex;
     flex-direction: row;
@@ -5,9 +13,10 @@
     flex-wrap: wrap;
     gap: 30px;
     padding: 40px;
+    max-width: 1440px;
     width: calc(100% - 80px);
-    height: 100%;
     background-color: white;
+    flex: 1;
 }
 
 #buttonContainer{
